<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nikitaend.polproject.activity.ScheduleDaysActivity">


    
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/monday"
        android:background="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        card_view:cardCornerRadius="1dp"
        style="@style/CardView">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/monday_icon"/>

        
        <TextView
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            android:textSize="18dp"
            android:gravity="center"/>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_below="@+id/monday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tuesday"
        android:background="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        card_view:cardCornerRadius="1dp"
        style="@style/CardView">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/tuesday_icon"/>

        <TextView
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            android:textSize="18dp"
            android:gravity="center"/>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_below="@+id/tuesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wednesday"
        android:background="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        card_view:cardCornerRadius="1dp"
        style="@style/CardView">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/wednesday_icon"/>

        <TextView
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wednesday"
            android:textSize="18dp"
            android:gravity="center"/>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_below="@+id/wednesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/thursday"
        android:background="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        card_view:cardCornerRadius="1dp"
        style="@style/CardView">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/thursday_icon"/>

        <TextView
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thursday"
            android:textSize="18dp"
            android:gravity="center"/>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_below="@+id/thursday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/friday"
        android:background="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        card_view:cardCornerRadius="1dp"
        style="@style/CardView">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/friday_icon"/>

        <TextView
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friday"
            android:textSize="18dp"
            android:gravity="center"/>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_below="@+id/friday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/saturday"
        android:background="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        card_view:cardCornerRadius="1dp"
        style="@style/CardView">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/saturday_icon"/>

        <TextView
            android:paddingTop="8dp"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saturday"
            android:textSize="18dp"
            android:gravity="center"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_below="@+id/saturday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sunday"
        android:background="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        card_view:cardCornerRadius="1dp"
        style="@style/CardView">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/sunday_icon"/>

        <TextView
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            android:textSize="18dp"
            android:gravity="center"/>

    </android.support.v7.widget.CardView>
</RelativeLayout>
</ScrollView>